data/derived/comb/progs/unify/prog2225.ml.out
Characters 668-682:
  | TheThing (ex1,ex2,ex3) -> ((eval (ex1,x,y)*sin(pi* eval (ex2,x,y))*cos(pi* eval (ex3,x,y)))/2);;
                                ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
